--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to Jonah Gannon's Homepage!
+description: Currently being built - come back later for something more interesting
