--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
-title: Welcome to Jonah Gannon's Homepage!
-description: Currently being built - come back later for something more interesting
+title: Jonah Gannon - Astrophysicist 
+description: Currently working on my PhD thesis under Prof. Duncan Forbes at Swinburne University, Melbourne, Australia
 layout: sidebar
